--- a/views/home.mustache
+++ b/views/home.mustache
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Roxy Faye Made</title>
-      <link rel="stylesheet" type="text/css" href="../styles.css">
+      <link rel="stylesheet" type="text/css" href="/styles.css">
    </head>
    <body>
       <a href="/">Home</a>
