--- a/views/register.mustache
+++ b/views/register.mustache
@@ -3,19 +3,19 @@
    <head>
       <meta charset="utf-8">
         <title>Roxy Faye Made</title>
-      <link rel="stylesheet" href="public/styles.css">
+      <link rel="stylesheet" href="/styles.css">
    </head>
    <body>
       <a href="/">Home</a>
       <a href="/register">Register</a>
       <a href="/signin">Signin</a>
-   <form action="/action_page.php">
+   <form method="post" action="/register">
       <div class="container">
         <label><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
+        <input type="text" placeholder="Enter Email" name="name" required>
 
         <label><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input type="password" placeholder="Enter Password" name="password" required>
 
         <label><b>Repeat Password</b></label>
         <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
