--- a/views/signin.mustache
+++ b/views/signin.mustache
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Roxy Faye Made</title>
-      <link rel="stylesheet" href="public/styles.css">
+      <link rel="stylesheet" href="/styles.css">
    </head>
    <body>
       <a href="/">Home</a>
